Modify. modified width and heights on buttons

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -7,7 +7,7 @@
     width: 80%;
     height: 80%;
     position: relative;
-    left:-40px;
+    left:10px;
     
 }
 .LogoTitle{
@@ -16,7 +16,7 @@
     margin: 0 0;
     position: relative;
     top:-16px;
-    left:-70px;
+    left:-20px;
 }
 nav{
     display: flex;
@@ -29,26 +29,28 @@ nav ul li{
     display: inline-block;
     color: white;
     padding: 10px 10px;
-    font-size: 75%;
+    font-size: 80%;
+    position: relative;
+    right: 40px;
 }
 .btn-StartFreeTrail{
     width: 10.5em;
     height: 3em;
     border-radius: 30em;
     font-size: 13px;
-    font-weight: 600;
+    font-weight: 300;
     font-family: inherit;
     background-color: #000000;
     color: #f1ffa2;
-    border: solid .1px #f1ffa2;
+    border: solid 1px #f1ffa2;
     position: relative;
-    overflow: hidden;
+    right: 30px;
     z-index: 1;
 }
 .btn-Account{
     margin: 10px;
-    width: 9em;
-    height: 3em;
+    width: 95px;
+    height: 40px;
     border-radius: 30em;
     font-size: 13px;
     font-weight: 600;
@@ -57,13 +59,8 @@ nav ul li{
     color: black;
     border: none;
     position: relative;
-    overflow: hidden;
+    right: 30px;
     z-index: 1;
-}
-
-button{
-    color: white;
-    border: solid 1px white;
 }
 section{
     margin: 6%;
@@ -76,17 +73,45 @@ section{
 .comma-clr{
     color:#f1ffa2;
 }
+section i{
+    color: rgb(136, 255, 136);
+}
 .GrownVertically{
     font-weight: 800;
 }
 .UrbanAreas{
     background-color: #f1ffa2;
-    font-weight: 800;
+    font-weight: bolder;
     color: #000000;
+    padding-right: 1%;
+    padding-left: 1%;
 }
 .section-para{
     font-size: 15px;
     width: 52%;
+}
+section img{
+    width: 45px;
+    height: 45px;
+    border-radius: 50px;
+    position: relative;
+    border: solid 1.5px black;
+    top:20px;
+}
+.PlantOne{
+    z-index: 0;
+    left: 50px;
+
+}
+.PlantTwo{
+    z-index: 1;
+    left: 35px;
+
+}
+.PlantThree{
+    z-index: 2;
+    left: 20px;
+
 }
 .btn-StartNow{
     width: 9em;
@@ -120,48 +145,132 @@ section{
    }
 
 footer{
+    height: 140px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     color:black;
-    /* background-color: white; */
+    background-color: white;
+    
 
+}
+.FarmStartAt{
+    width:13em;
+    height: 4em;
+    font-size: 12px;
+    font-weight: 300;
+    letter-spacing: -0.1px;
+    background-color: #000000;
+    color: rgb(255, 255, 255);
+    border: solid 1px black;
+    position: relative;
+    left: 75px;
+}
+.SevenAM{
+    padding: 6px 6px;
+    border-radius: 90px;
+    font-size: 10px;
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
+    font-weight: 600;
+    position: relative;
+    left: 3px;
+}
+.FooterLeaf{
+    position: relative;
+    left: 62px;
+    height: 48px;
+    width: 48px;
+}
+
+footer ul{
+    background-color: white;
 }
 footer ul li{
     list-style: none;
     display: inline-block;
-    /* color: white; */
+    color: white;
     padding: 10px 10px;
+    background-color: white;
 }
 .footer-paragraph{
-    width: 25%;
-    margin-left: 300px;
-    font-size:21px;
+    width: 22%;
+    margin-left: 100px;
+    font-size:18px;
+    color:black;
+    background-color: white;
+    font-weight: 600;
 }
 
 footer button{
-    width: 9em;
-    height: 3em;
+    width: 110px;
+    height: 40px;
     border-radius: 30em;
-    font-size: 13px;
+    font-size: 11px;
     font-weight: 600;
     font-family: inherit;
     background-color: #f1ffa2;
     color: black;
-    border: none;
-    position: relative;
-    overflow: hidden;
-    z-index: 1;
+    border: solid 1px black;
 }
 .DontWait{
-    z-index: 6;
+    position: relative;
+    z-index: 2;
+    
+
 }
 .JoinUs{
     background-color: #e5e8fe;
     margin: -40px;
-    z-index:4;
+    /* z-index:4; */
+    padding-right:0px;
+    padding-left:14%;
+    position: relative;
+    z-index: 1;
+    left:-10px;
 }
 .ActNow{
     background-color: #fcecbe;
+    /* z-index: 2; */
+    padding-left: 9%;
+    padding-right: 0px;
+    position: relative;
+    z-index:0;
+    left:-10px;
+}
+.ContactTeam{
+    width: 130px;
+    height: 40px;
+    border-radius: 30em;
+    font-size: 12px;
+    font-weight: 500;
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
+    border: solid 1px rgb(0, 0, 0);
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+}
+footer img{
+    width: 35px;
+    height: 35px;
+    border-radius: 50px;
+    position: relative;
+    border: solid 1px black;
+    object-fit: cover;
+}
+.PeopleOne{
     z-index: 2;
+   left: 5px;
+
+}
+.PeopleTwo{
+    z-index: 1;
+    left:-20px;
+
+}
+.PeopleThree{
+    z-index: 0;
+    left: -45px;
+
 }
